--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,10 @@
 <h1> Books </h1>
+
+<% @books.each do |book| %>
+  <ul>
+    <li><%= book.title %></li>
+    <li><%= book.author %></li>
+    <li><%= book.description %></li>
+    <li><%= book.reading_status %></li>
+  </ul>
+<% end %>
