new-book-route-form-view-and-controller-method

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,6 @@
 <h1> Books </h1>
+<%# button_to 'New Book', books_new_path, method: :get %>
+<%= link_to 'New book', books_new_path %>
 
 <% @books.each do |book| %>
   <ul>
@@ -6,5 +8,7 @@
     <li><%= book.author %></li>
     <li><%= book.description %></li>
     <li><%= book.reading_status %></li>
+    <button>Modify</button>
+    <button>Delete</button>
   </ul>
 <% end %>
